syntax = "proto3";

package standort.v1;

import "google/api/annotations.proto";

option go_package = "github.com/alexfalkowski/standort/api/standort/v1";
option ruby_package = "Standort::V1";

// Location of the response.
message Location {
  string country = 1;
  string continent = 2;
}

// GetLocationByIPRequest for an IP address.
message GetLocationByIPRequest {
  string ip = 1;
}

// GetLocationByIPResponse for an IP address.
message GetLocationByIPResponse {
  map<string, string> meta = 1;
  Location location = 2;
}

// GetLocationByLatLngRequest for a latitude and longitude.
message GetLocationByLatLngRequest {
  double lat = 1;
  double lng = 2;
}

// GetLocationByLatLngResponse for a latitude and longitude.
message GetLocationByLatLngResponse {
  map<string, string> meta = 2;
  Location location = 1;
}

// Service allows to get locations by different filters.
service Service {
  // GetLocationByIP for an IP address.
  rpc GetLocationByIP(GetLocationByIPRequest) returns (GetLocationByIPResponse) {
    option (google.api.http) = {get: "/v1/location/ip/{ip}"};
  }

  // GetLocationByLatLng for a latitude and longitude.
  rpc GetLocationByLatLng(GetLocationByLatLngRequest) returns (GetLocationByLatLngResponse) {
    option (google.api.http) = {get: "/v1/location/lat/{lat}/lng/{lng}"};
  }
}
